--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html><!--[if IE]>  <html class="stl_ie"> <![endif]-->
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
 		<title>
+			Mohamad Abo Haileh CV
 		</title>
 		
 	<STYLE>
