--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Mohamad Abo Haileh CV</title>
   </head>
   <body>
-    <iframe src="./cv.pdf" width="100%" height="700px">
-    </iframe>
+<!--     <iframe src="./cv.pdf" width="100%" height="700px"></iframe> -->
+       <iframe src="https://drive.google.com/file/d/1g3GgswuH1wu-wQR4m0wCv7O2YlXHcBeq/preview" width="100%" height="1000px" allow="autoplay"></iframe>
   </body>
 </html>
